--- a/l10n_br_base/views/res_partner_view.xml
+++ b/l10n_br_base/views/res_partner_view.xml
@@ -72,26 +72,9 @@
                             string="RG"
                             attrs="{'invisible': [('is_company','=', True)]}"
                         />
-                        <label
-                            for="inscr_est"
-                            name="inscr_est"
-                            string="State Tax Number"
-                            attrs="{'invisible': [('is_company','!=', True)]}"
-                        />
+                        <label for="inscr_est" name="inscr_est" string="IE" />
                     </div>
-                    <field
-                        name="rg"
-                        colspan="2"
-                        nolabel="1"
-                        attrs="{'invisible': [('is_company','=', True)]}"
-                    />
-                    <field
-                        colspan="2"
-                        name="inscr_est"
-                        nolabel="1"
-                        placeholder="Para ISENTO deixe vazio ou escreva 'ISENTO'"
-                        attrs="{'invisible': [('is_company','!=', True)]}"
-                    />
+                    <field colspan="4" name="inscr_est" nolabel="1" />
                 </group>
             </xpath>
             <page position="after" name="sales_purchases">
